# ai-trends-analyzer-pro

./: Dockerfile  README.md  __init__.py  analyzer.py  cache.py  data_generator.py  docker-compose.yml  exceptions.py  index.html  logging.py  main.py  nginx.conf  predictor.py  prometheus.yml  pyproject.toml  requirements.txt  schemas.py  settings.py  setup.sh  test_data_generator.py  test_predictor.py
