[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-trends-analyzer-pro"
version = "1.0.0"
description = "Production-ready AI trends analysis system for Indian market"
authors = ["AI Trends Team <team@aitrends.com>"]
readme = "README.md"
packages = [{include = "ai_trends"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
plotly = "^5.17.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
redis = "^5.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ai_trends --cov-report=html --cov-report=term-missing"